--- a/todo-app-front/src/App.css
+++ b/todo-app-front/src/App.css
@@ -1,42 +1,46 @@
+:root{
+  --white-color: rgba(255, 255, 255, 0.87);
+}
+
 #root {
-  max-width: 1280px;
+  max-width: 1000px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  display: flex;
+  flex-grow: 1;
+  align-items: start;
+  flex-direction: column;
+  gap: 10px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.searchBar{
+  width: 100%;
+  position: relative;
+  box-sizing: border-box;
+  padding: 25px;
+  border: 1px solid var(--white-color);
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.generalBtn{
+  box-sizing: border-box;
+  padding: 5px 15px;
 }
 
-.card {
-  padding: 2em;
+.searchBtn{
+  position: absolute;
+  right: 25px;
+  bottom: 25px;
 }
 
-.read-the-docs {
-  color: #888;
+.newToDoBtn{
+  align-self: left;
+}
+
+.tableContainer{
+  overflow-x: auto;
 }
