Add 'Pagination' buttons, 'Metrics' section, and 'New Todo' modal components

--- a/todo-app-front/src/App.css
+++ b/todo-app-front/src/App.css
@@ -1,9 +1,11 @@
 :root{
   --white-color: rgba(255, 255, 255, 0.87);
+  --darkgrey-color: rgb(61, 61, 61);
+  --lightgrey-color: rgb(93, 93, 93);
 }
 
 #root {
-  max-width: 1000px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -29,6 +31,17 @@
 .generalBtn{
   box-sizing: border-box;
   padding: 5px 15px;
+  background-color: var(--darkgrey-color);
+  border-radius: 5px;
+  border: 1px solid var(--white-color);
+  transition: 50ms;
+  &:hover{
+    background-color: var(--lightgrey-color);
+    cursor: pointer;
+  }
+  &:active{
+    background-color: var(--darkgrey-color);
+  }
 }
 
 .searchBtn{
@@ -43,4 +56,87 @@
 
 .tableContainer{
   overflow-x: auto;
+  & > table{
+    border: 1px solid var(--white-color);
+    border-collapse: collapse;
+  }
+}
+
+td{
+  border: 1px solid var(--white-color);
+  text-align: start;
+  padding: 5px 10px;
+}
+
+.colState{
+  width: 40px;
+}
+
+.colName{
+  width: fit-content;
+}
+
+.colPriority{
+  width: 80px;
+}
+
+.colDueDate{
+  width: 100px;
+}
+
+.colActions{
+  width: 150px;
+}
+
+.paginationControl{
+  margin-top: 50px;
+  align-self: center;
+
+  box-sizing: border-box;
+  padding: 20px 100px;
+  border: 1px solid var(--white-color);
+}
+
+.metricsContainer{
+  box-sizing: border-box;
+  border: 1px solid var(--white-color);
+  padding: 20px 40px;
+  width: 100%;
+
+  display: grid;
+  grid-template-columns: 50% 50%;
+  justify-content: start;
+  align-items: start;
+}
+
+.newToDoModal{
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  border: 1px solid var(--white-color);
+  padding: 10px 25px;
+  gap: 10px;
+}
+
+.inputContainer{
+  display: flex;
+  flex-direction: column;
+  text-align: start;
+}
+
+.btnsContainer{
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  justify-content: end;
+  & > .saveTodoBtn{
+    transition: 50ms;
+    background-color: #1b69dc;
+    &:hover{
+      background-color: #3e86f1;
+    }
+    &:active{
+      background-color: #1b69dc;
+    }
+  }
 }
