--- a/todo-app-front/src/App.css
+++ b/todo-app-front/src/App.css
@@ -14,6 +14,7 @@
   align-items: start;
   flex-direction: column;
   gap: 10px;
+  position: relative;
 }
 
 .searchBar{
@@ -110,12 +111,19 @@ td{
 }
 
 .newToDoModal{
+  width: 450px;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
   border: 1px solid var(--white-color);
   padding: 10px 25px;
   gap: 10px;
+
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -60%);
+  background-color: black;
 }
 
 .inputContainer{
