Fix filters and sorting, modals autoclose on submit and table gets updated

--- a/todo-app-front/src/App.css
+++ b/todo-app-front/src/App.css
@@ -57,9 +57,11 @@
 
 .tableContainer{
   overflow-x: auto;
+  width: 100%;
   & > table{
     border: 1px solid var(--white-color);
     border-collapse: collapse;
+    width: 100%;
   }
 }
 
@@ -76,6 +78,7 @@ td{
 
 .colName{
   width: fit-content;
+
 }
 
 .colPriority{
